--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-DB_DSN = postgresql:host=localhost;port=5432;dbname=pact-dev-db
+DB_DSN = pgsql:host=localhost;port=5432;dbname=pact-dev-db
 DB_USER = devuser
 DB_PASSWORD = devpassword
