--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,11 +1,12 @@
 version: "3.8"
 
 services:
-  db:
-    image: postgres:13-alpine
-    ports:
-      - 5432:5432
-    environment:
-      - POSTGRES_DB=pact-dev-db
-      - POSTGRES_USER=devuser
-      - POSTGRES_PASSWORD=devpassword
+    db:
+        image: postgres:13-alpine
+        container_name: pact_db
+        ports:
+            - 5432:5432
+        environment:
+            - POSTGRES_DB=pact-dev-db
+            - POSTGRES_USER=devuser
+            - POSTGRES_PASSWORD=devpassword
