--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     "authors": [],
     "require": {
         "vlucas/phpdotenv": "^5.6",
-        "felippe-regazio/php-hot-reloader": "dev-master"
+        "felippe-regazio/php-hot-reloader": "dev-master",
+        "phpmailer/phpmailer": "^6.9"
     }
 }
