--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,9 @@ APP_ENVIRONMENT = dev
 DB_DSN = pgsql:host=localhost;port=5432;dbname=pact-dev-db
 DB_USER = devuser
 DB_PASSWORD = devpassword
+DB_HOST = localhost
+DB_PORT = 5432
+DB_NAME = pact-dev-db
 
 MAIL_HOST = localhost
 MAIL_NAME = test@pact.com
