feat: start protocol of tchatator

--- a/tchatator/makefile
+++ b/tchatator/makefile
@@ -2,7 +2,7 @@ CC = cc
 CFLAGS = -Wall
 
 output = bin
-utils = src/database.c src/protocol.c src/log.c src/config.c
+utils = src/database.c src/protocol.c src/log.c src/config.c src/utils.c
 
 server: $(utils) src/server.c
 	$(CC) $^ -o $(output)/server -I/usr/include -L/usr/lib -lpq
