--- a/tchatator/makefile
+++ b/tchatator/makefile
@@ -14,9 +14,11 @@ client: $(utils) src/client.c
 
 clean:
 	rm -f $(output)/*
-<<<<<<< Updated upstream
-=======
 
 build-server: $(utils) src/server.c
 	$(CC) $^ -o $(output)/server -I/usr/include -L/usr/lib -lpq
->>>>>>> Stashed changes
+
+server-vic: $(utils) src/server.c
+	$(CC) $^ -o $(output)/server -I/usr/include/postgresql -L/usr/lib/x86_64-linux-gnu -lpq
+	./$(output)/server
+
