--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,8 @@
         "fstream": "c",
         "locale": "c",
         "libpq-fe.h": "c",
-        "stdlib.h": "c"
+        "stdlib.h": "c",
+        "types.h": "c"
     },
     "C_Cpp.clang_format_fallbackStyle": "WebKit"
 }
