--- a/tchatator/makefile
+++ b/tchatator/makefile
@@ -22,3 +22,6 @@ server-vic: $(utils) src/server.c
 	$(CC) $^ -o $(output)/server -I/usr/include/postgresql -L/usr/lib/x86_64-linux-gnu -lpq
 	./$(output)/server
 
+client-vic: $(utils) src/client.c
+	$(CC) $^ -o $(output)/client -I/usr/include/postgresql -L/usr/lib/x86_64-linux-gnu -lpq
+	./$(output)/client
