--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,34 @@
 {
     "files.associations": {
+        "*.ldtk": "jsonl",
         "*.ndjson": "jsonl",
         "*.dbclient-js": "javascript",
         "*.embeddedhtml": "html",
-        "*.ldtk": "jsonl",
         "*.tcc": "c",
         "fstream": "c",
         "locale": "c",
         "libpq-fe.h": "c",
         "stdlib.h": "c",
-        "types.h": "c"
+        "types.h": "c",
+        "unistd.h": "c",
+        "in.h": "c",
+        "charconv": "c",
+        "chrono": "c",
+        "optional": "c",
+        "format": "c",
+        "ratio": "c",
+        "system_error": "c",
+        "array": "c",
+        "functional": "c",
+        "tuple": "c",
+        "type_traits": "c",
+        "utility": "c",
+        "__bit_reference": "c",
+        "__node_handle": "c",
+        "bitset": "c",
+        "deque": "c",
+        "limits": "c",
+        "vector": "c"
     },
     "C_Cpp.clang_format_fallbackStyle": "WebKit"
 }
