feat(tchatator): continue web clients

--- a/tchatator/makefile
+++ b/tchatator/makefile
@@ -31,6 +31,11 @@ websocket: $(utils) src/ws_server.c
 	$(CC) $(CFLAGS) $^ -o $(output)/websocket-server -Ilib/wsServer/include -Llib/wsServer -lws -Ilib/json-c -Llib/json-c/ -ljson-c
 	./$(output)/websocket-server
 
+websocket-prod: $(utils) src/ws_server.c
+	mkdir -p $(output)
+	$(CC) $^ -o $(output)/websocket-server -Ilib/wsServer/include -Llib/wsServer -lws -Ilib/json-c -Llib/json-c/ -ljson-c -I/usr/include/postgresql -L/usr/lib/x86_64-linux-gnu -lpq
+	./$(output)/websocket-server
+
 clean:
 	rm -f $(output)/*
 
