feat(tchatator): setup docker

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,3 +10,7 @@ services:
             - POSTGRES_DB=pact-dev-db
             - POSTGRES_USER=devuser
             - POSTGRES_PASSWORD=devpassword
+
+networks:
+    sae:
+        external: true
