--- a/tchatator/makefile
+++ b/tchatator/makefile
@@ -10,7 +10,7 @@ utils = src/database.c src/protocol.c src/log.c src/config.c src/utils.c
 # - wsServer : https://github.com/Theldus/wsServer
 # - json-c: https://github.com/json-c/json-c
 deps:
-	mkdir $(lib_dir)
+	mkdir -p $(lib_dir)
 	cd $(lib_dir) && git clone https://github.com/Theldus/wsServer
 	cd $(lib_dir)/wsServer && make
 	cd $(lib_dir) && git clone https://github.com/json-c/json-c
@@ -34,7 +34,6 @@ websocket: $(utils) src/ws_server.c
 websocket-prod: $(utils) src/ws_server.c
 	mkdir -p $(output)
 	$(CC) $^ -o $(output)/websocket-server -Ilib/wsServer/include -Llib/wsServer -lws -Ilib/json-c -Llib/json-c/ -ljson-c -I/usr/include/postgresql -L/usr/lib/x86_64-linux-gnu -lpq -lpthread
-	./$(output)/websocket-server
 
 clean:
 	rm -f $(output)/*
