feat: update tchatator protocol and server docs

--- a/tchatator/docker-compose.yml
+++ b/tchatator/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       - "4242:4242"
     container_name: tchatator
     command: ["./bin/websocket-server"]
+    networks:
+      - sae
 
 networks:
   sae:
