--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,7 +10,8 @@ services:
             - POSTGRES_DB=pact-dev-db
             - POSTGRES_USER=devuser
             - POSTGRES_PASSWORD=devpassword
+        networks:
+            - sae
 
 networks:
     sae:
-        external: true
