--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,9 @@
         "vlucas/phpdotenv": "^5.6",
         "felippe-regazio/php-hot-reloader": "dev-master",
         "phpmailer/phpmailer": "^6.9",
-        "dompdf/dompdf": "^2.0"
+        "dompdf/dompdf": "^2.0",
+        "spomky-labs/otphp": "^11.3",
+        "psr/clock": "^1.0",
+        "endroid/qr-code": "^6.0"
     }
 }
